--- a/src/03-shop/styles/03-shop-home.scss
+++ b/src/03-shop/styles/03-shop-home.scss
@@ -185,6 +185,7 @@ $title-text:rgb(190, 174, 146);
         border:5px solid #000;
         img {
           width: 100%;
+          height: 100%;
           object-fit: cover;
         }
         .r-shop-slider-content {
