--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -112,6 +112,7 @@ $card-btn:#28ADA5;
                                 border-radius: 8px;
                                 margin: 0;
                                 margin-bottom: 20px;
+                                outline-style: none;
                             }
                         }
                     }
@@ -160,6 +161,7 @@ $card-btn:#28ADA5;
                                 border-radius: 8px;
                                 margin: 0;
                                 margin-bottom: 20px;
+                                outline-style: none;
                             }
                             
                         }
@@ -211,6 +213,7 @@ $card-btn:#28ADA5;
                                 border-radius: 8px;
                                 margin: 0;
                                 margin-bottom: 20px;
+                                outline-style: none;
                             }
                         }
                     }
@@ -422,8 +425,6 @@ $card-btn:#28ADA5;
                     display: flex;
                     overflow-x: scroll;
                     padding: 30px 0;
-
-                    
                     .r-m-col{
                         width: 33.333333%;
                         padding-right: 5px;
@@ -431,6 +432,7 @@ $card-btn:#28ADA5;
                         .r-m-card-container{
                             border: 3px solid #333;
                             display: flex;
+                            transition: 1s;
                             .r-m-card-img{
                                 padding: 10px;
                                 text-align: center;
@@ -457,8 +459,7 @@ $card-btn:#28ADA5;
                             .r-m-card-body{
                                 width: 70%;
                                 padding: 10px;
-                                // height: 250px;
-                                // display: flex;
+                                // height: 220px;
                                 h2{
                                     font-size: 20px;
                                     font-weight: 700;
@@ -586,22 +587,22 @@ $card-btn:#28ADA5;
                 }
                 .r-m-card-wrap::-webkit-scrollbar-track
                 {
-                    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-                    border-radius: 10px;
-                    background-color: #F5F5F5;
+                    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+                    // border-radius: 10px;
+                    // background-color: #F5F5F5;
                 }
 
                 .r-m-card-wrap::-webkit-scrollbar
                 {
                     width: 12px;
                     height: 8px;
-                    background-color: #F5F5F5;
+                    // background-color: #F5F5F5;
                 }
 
                 .r-m-card-wrap::-webkit-scrollbar-thumb
                 {
                     border-radius: 10px;
-                    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+                    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
                     background-color: rgb(182, 182, 182);
                 }
                 .r-card-wrap{
@@ -613,7 +614,6 @@ $card-btn:#28ADA5;
                         width: 33.333333%;
                         padding: 20px;
                         .r-card-container{
-                            //height: 100%;
                             border: 3px solid #333;
                             display: flex;
                             flex-direction: column;
