--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -1,293 +1,325 @@
-$colorBlue : #113F75;
-$colorYellow : #FAD249;
-$colorOrange : #EB8E4C;
-$colorWhite : #ffffff;
-$colorLightGrey:#EEEEEE;
-$colorDarkGrey:#4B646A;
-$colorMiddleGrey:#747474;
+$colorBlue: #113f75;
+$colorYellow: #fad249;
+$colorOrange: #eb8e4c;
+$colorWhite: #ffffff;
+$colorLightGrey: #eeeeee;
+$colorDarkGrey: #4b646a;
+$colorMiddleGrey: #747474;
 $colorBrown: #986868;
-$colorList: #FDFCEE;
-$colorLightBlue: #91D3F5;
-$colorGreen: #21A07D;
-$colorPurple: #9786DF;
-$colorPink: #EFC2D9;
-$colorLine: #CECECE;
+$colorList: #fdfcee;
+$colorLightBlue: #91d3f5;
+$colorGreen: #21a07d;
+$colorPurple: #9786df;
+$colorPink: #efc2d9;
+$colorLine: #cecece;
+$colorBlack: #000000;
 
-
-@mixin position($top, $left){
-    position: absolute;
-    top: $top;
-    left: $left;
-};
-@mixin size($width, $height){
-    width: $width;
-    height: $height;
+@mixin position($top, $left) {
+  position: absolute;
+  top: $top;
+  left: $left;
+}
+@mixin size($width, $height) {
+  width: $width;
+  height: $height;
 }
 // ----------------!!start!!------------------
-*{
-    box-sizing: border-box;
-    margin: 0;
-    font-family: sans-serif;
-    list-style-type: none;
-    text-decoration: none;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  font-family: sans-serif;
+  list-style-type: none;
+  text-decoration: none;
 }
-html{
-    // filter: invert(1);
+html {
+  // filter: invert(1);
 
-    //change 1rem into 10px
-    font-size: 62.5%;
+  //change 1rem into 10px
+  font-size: 62.5%;
 }
-body{
-    background-color: $colorWhite;
+body {
+  background-color: $colorWhite;
 }
-.j-sides{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
-        .j-left{
-            @include size(250px, 100vh);
-            background-color: $colorYellow;
-            ul{
-                @include size(100%,100%);
-                padding: 0;
-                list-style-type: none;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-                align-items: center;
-                li{
-                    div{
-                        width: 240px;
-                        font-size: 2.3rem;
-                        color: $colorWhite;
-                        position: relative;
-                        text-align: center;
-    
-                        &:hover{
-                            color: $colorBlue;
-                            &::after{
-                                content: '';
-                                background-image: url(../svg/tada.svg);
-                                position: absolute;
-                                background-repeat: no-repeat;
-                                top: -16px;
-                                left: 12px;
-                                width: 250px;
-                                height: 100px;
-                                padding: 0;
-                            }
-                                } 
-                        }
-                }
-            }
-        }
-        .j-right{
-           @include size(300px, 100vh);
-            background-color: $colorYellow;
-            ul{
-                @include size(100%, 100%);
-                list-style-type: none;
-                padding: 0;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-                align-items: center;
-                li{
-                    .j-right-banner{
-                        @include size(240px, 70px);
-                        font-size: 3.5rem;
-                        font-weight: 900;
-                        background-color:$colorWhite;
-                        color: $colorBrown;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        border-radius: 0;
-                        margin-top: 30px;
-
-                    }
-                    div{
-                        @include size(240px,4px);
-                        background-color:$colorWhite;
-                        border-radius: 4px;
-                        margin-bottom: 100px;
-                        }
-                        
-                    }
-                }
-            }
-    }
-.j-event-middle-events{
-    // outline: 1px black solid;
-    @include position(47%, 49%);
-    @include size(1100px, 900px);
+.j-sides {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.j-event-middle-events {
+  outline: 1px black solid;
+  @include position(47%, 49%);
+  @include size(1100px, 900px);
+  transform: translate(-50%, -50%);
+  @media (max-width: 390px) {
+    outline: 1px black solid;
+    @include position(55%, 51%);
+    @include size(360px, 844px);
     transform: translate(-50%, -50%);
-    .j-cate-banner{
-        @include size(100%, 170px);
-        background-color: $colorLightGrey;
-        padding: 15px 20px;
-        .j-cate-banner-deco{
-            @include size(100%, 100%);
-            border: solid 4px #ffffff;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            padding-left: 50px;
-            div{
-                font-size: 7rem;
-                font-weight: 900;
-                color: $colorDarkGrey;
-                letter-spacing: 0.8rem;
-            }
-        }
+  }
+  .j-cate-banner {
+    @include size(100%, 170px);
+    background-color: $colorLightGrey;
+    padding: 15px 20px;
+    @media (max-width: 390px) {
+      @include size(100%, 100px);
+      padding: 6px 10px;
     }
-    .j-cate-group{
-        margin-top: 30px;
+    .j-cate-banner-deco {
+      @include size(100%, 100%);
+      border: solid 4px #ffffff;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding-left: 50px;
+      @media (max-width: 390px) {
         display: flex;
-        justify-content: space-evenly;
-        li{
-            position: relative;
-            a{
-                // outline: 3px solid $colorDarkGrey;
-                display: block;
-                cursor: pointer;
-                text-align: center;
-                font-size: 2.7rem;
-                font-weight: 900;
-                color: $colorMiddleGrey;
-                border-bottom:3px solid $colorWhite;
-                // position: relative;
-                &::after{
-                    content: "";
-                    position: absolute;
-                    top: 0%;
-                    left: -10%;
-                    width: 120%;
-                    height: 50px;
-                    border-bottom: 2px solid $colorLightGrey;
-                    transform: scale(0.5);
-                    transform: translateY(100%);
-                    transition: .5s;
-                    opacity: 0;
-                }
-                &:hover::after{
-                    border-bottom: 3px solid $colorMiddleGrey;
-                    transform: scale(1);
-                    transform: translateY(0%);
-                    opacity: 1;
-                }
-            }
+        justify-content: center;
+        padding-left: 0;
+      }
+      div {
+        font-size: 7rem;
+        font-weight: 900;
+        color: $colorDarkGrey;
+        letter-spacing: 0.8rem;
+        @media (max-width: 390px) {
+          font-size: 4rem;
+          text-align: center;
         }
+      }
     }
-    .j-mountains{
+  }
+  .j-cate-group {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    @media (max-width: 390px) {
+      padding-left: 0;
+    }
+    li {
+      position: relative;
+      a {
+        // outline: 3px solid $colorDarkGrey;
+        display: block;
+        cursor: pointer;
+        text-align: center;
+        font-size: 2.7rem;
+        font-weight: 900;
+        color: $colorMiddleGrey;
+        border-bottom: 3px solid $colorWhite;
+        @media (max-width: 390px) {
+          font-size: 1.5rem;
+        }
+        // position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          top: 0%;
+          left: -10%;
+          width: 120%;
+          height: 50px;
+          border-bottom: 3px solid $colorLightGrey;
+          transform: scale(0.5);
+          transform: translateY(100%);
+          transition: 0.5s;
+          opacity: 0;
+          @media (max-width: 390px) {
+            border-bottom: 1px solid $colorMiddleGrey;
+            height: 30px;
+          }
+        }
+        &:hover::after {
+          border-bottom: 3px solid $colorMiddleGrey;
+          transform: scale(1);
+          transform: translateY(0%);
+          opacity: 1;
+          @media (max-width: 390px) {
+            border-bottom: 1px solid $colorMiddleGrey;
+          }
+        }
+      }
+    }
+  }
+  .j-mountains {
+    width: 100%;
+    height: 100px;
+    // outline: 2px black solid;
+    margin-top: 25px;
+    margin-bottom: -5px;
+    position: relative;
+    z-index: -1;
+    overflow: hidden;
+    .j-blue-mountain {
+      transition: 0.5s;
+      transform: scale(0.8);
+      @include position(16%, -2%);
+      @media (max-width: 390px) {
+        transform: scale(0.5);
+        @include position(24%, -40%);
+        &:hover {
+          transform: scale(0.5);
+          @include position(24%, -40%);
+          transform: translateY(-20px);
+        }
+      }
+      &:hover {
+        transform: scale(1);
+        transform: translateY(-16%);
+        // @media (max-width: 390px) {
+        //     transform: scale(0.5);
+        //     @include position(24%, -40%);
+        //     transform: translateY(-10px);
+        //   }
+      }
+    }
+    .j-rice-mountain {
+      transition: 0.5s;
+      transform: scale(0.8);
+      @include position(16%, 20%);
+      @media (max-width: 390px) {
+        transform: scale(0.5);
+        @include position(24%, -19%);
+      }
+      &:hover {
+        transform: scale(1);
+        transform: translateY(-16%);
+        @media (max-width: 390px) {
+          transform: scale(0.5);
+          @include position(24%, -19%);
+        }
+      }
+    }
+    .j-green-mountain {
+      z-index: 2;
+      transition: 0.5s;
+      transform: scale(0.8);
+      @include position(16%, 43%);
+      @media (max-width: 390px) {
+        transform: scale(0.5);
+        @include position(24%, 4%);
+      }
+      &:hover {
+        transform: scale(1);
+        transform: translateY(-16%);
+        @media (max-width: 390px) {
+          transform: scale(0.5);
+          @include position(24%, 4%);
+        }
+      }
+    }
+    .j-orange-mountain {
+      transition: 0.5s;
+      transform: scale(0.8);
+      @include position(16%, 65%);
+      @media (max-width: 390px) {
+        transform: scale(0.5);
+        @include position(24%, 27%);
+      }
+      &:hover {
+        transform: scale(1);
+        transform: translateY(-16%);
+      }
+    }
+    .img {
+      overflow: hidden;
+    }
+  }
+  .j-event-card {
+    background-color: $colorGreen;
+    padding: 45px 40px;
+    @media (max-width: 390px) {
+      padding: 15px 15px;
+    }
+    .j-lego {
+      @include size(100%, 500px);
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 95px 1fr 80px;
+      gap: 30px;
+      border-radius: 15px;
+      grid-template-areas:
+        'name name text'
+        'image image text'
+        'image image sold';
+      @media (max-width: 390px) {
+        @include size(100%, 400px);
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 60px 1fr 120px 50px;
+        gap: 15px;
+        border-radius: 5px;
+        grid-template-areas:
+          'name name name'
+          'image image image'
+          'text text text'
+          '. sold sold';
+      }
+      .j-card-name {
+        grid-area: name;
+        border-radius: 15px;
+        padding: 18px;
+        font-size: 4.5rem;
+        font-weight: 900;
+        text-align: center;
+        color: $colorMiddleGrey;
+        @media (max-width: 390px){
+            border-radius: 5px;
+            font-size: 3rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+      }
+      .j-card-image {
+        grid-area: image;
+        border-radius: 15px;
         width: 100%;
-        height: 100px;
-        // outline: 2px black solid;
-        margin-top: 25px;
-        margin-bottom: -5px;
-        position: relative;
-        z-index: -1;
         overflow: hidden;
-        .j-blue-mountain{
-            transition: .5s;
-            transform: scale(0.8);
-            @include position(16%, -2%);
-            &:hover{
-                transform: scale(1);
-                transform: translateY(-16%);
-            }
+        object-fit: cover;
+        @media (max-width: 390px){
+            border-radius: 5px;
         }
-        .j-rice-mountain{
-            transition: .5s;
-            transform: scale(0.8);
-            @include position(16%, 20%);
-            &:hover{
-                transform: scale(1);
-                transform: translateY(-16%);
-            }
+        img {
+          width: 100%;
         }
-        .j-green-mountain{
-            z-index: 2;
-            transition: .5s;
-            transform: scale(0.8);
-            @include position(16%, 43%);
-            &:hover{
-                transform: scale(1);
-                transform: translateY(-16%);
-            }
+      }
+      .j-card-text {
+        grid-area: text;
+        border-radius: 15px;
+        padding: 10px 25px;
+        font-size: 1.8rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 3rem;
+        background-color: $colorMiddleGrey;
+        color: $colorWhite;
+        text-align: center;
+        @media (max-width: 390px){
+            border-radius: 5px;
+            padding: 15px 15px;
+            font-size: 1.5rem;
+            line-height: 1.8rem;
+            text-align: center;
         }
-        .j-orange-mountain{
-            transition: .5s;
-            transform: scale(0.8);
-            @include position(16%, 65%);
-            &:hover{
-                transform: scale(1);
-                transform: translateY(-16%);
-            }
+      }
+      .j-card-sold {
+        grid-area: sold;
+        border-radius: 15px;
+        padding: 13px;
+        font-size: 4rem;
+        font-weight: 900;
+        text-align: center;
+        color: $colorMiddleGrey;
+        @media (max-width: 390px){
+            border-radius: 5px;
+            font-size: 2.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        .img{
-            overflow: hidden;
-        }
-        
+      }
+      div {
+        background-color: $colorLightGrey;
+      }
     }
-    .j-event-card{
-        background-color: $colorGreen;
-        padding:45px 40px;
-        .j-lego{
-            @include size(100%, 500px);
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 95px 1fr 80px;
-            gap: 30px;
-            border-radius: 15px;
-            grid-template-areas: 
-            "name name text"
-            "image image text"
-            "image image sold";
-            .j-card-name{
-                grid-area: name;
-                border-radius: 15px;
-                padding: 18px;
-                font-size: 4.5rem;
-                font-weight: 900;
-                text-align: center;
-                color: $colorMiddleGrey;
-                
-            }
-            .j-card-image{
-                grid-area: image;
-                border-radius: 15px;
-                width: 100%;
-                overflow: hidden;
-                object-fit:cover;
-                img{
-                    width: 100%;
-                }
-            }
-            .j-card-text{
-                grid-area: text;
-                border-radius: 15px;
-                padding: 10px 25px;
-                font-size: 1.8rem;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                line-height: 3rem;
-                background-color: $colorMiddleGrey;
-                color: $colorWhite;
-            }
-            .j-card-sold{
-                grid-area: sold;
-                border-radius: 15px;
-                padding: 13px;
-                font-size: 4rem;
-                font-weight: 900;
-                text-align: center;
-                color: $colorMiddleGrey;
-            }
-            div{
-               background-color: $colorLightGrey;
-            }
-        }
-    }
+  }
 }
