--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -135,12 +135,13 @@ $main-border-radius: 8px;
           120px/13% no-repeat,
         url(./../../../public/03-shop-img/food_ramen_01.png) 150px 60px/15%
           no-repeat,
-        url(./../../../public/03-shop-img/food_pizza_01.png) 220px 240px/15%
+        url(./../../../public/03-shop-img/food_pizza_01.png) 220px 340px/15%
           no-repeat,
         url(./../../../public/03-shop-img/food_french_fries_01.png) 30px 580px/20%
           no-repeat;
 
       .r-shop-home-main {
+        padding: 60px 0;
         display: flex;
         .r-shop-home-main-inner {
           display: flex;
@@ -191,8 +192,9 @@ $main-border-radius: 8px;
           }
         }
         .r-shop-home-main-visual {
-          width: 10%;
-          height: 360px;
+          display: none;
+          width: 30%;
+          height: 120px;
           background: url('./../../../public/03-shop-img/potato.png') 50% 50%/cover
             no-repeat;
           margin-top: 40px;
@@ -202,7 +204,7 @@ $main-border-radius: 8px;
   }
 
   .y-section-merch {
-    max-width: 360px;
+    // max-width: 360px;
     overflow: hidden;
     .r-shop-home-carousel {
       .r-wave-section {
@@ -379,7 +381,7 @@ $main-border-radius: 8px;
 
   .y-section-about {
     margin-top: 20px;
-    max-width: 360px;
+    // max-width: 360px;
     overflow: hidden;
     .a-video {
       text-align: center;
@@ -707,9 +709,6 @@ $main-border-radius: 8px;
     }
 
     .y-section-search {
-      max-width: 360px;
-      overflow: hidden;
-
         .r-shop-home-container {
           background: url(./../../../public/03-shop-img/food_cola_s_01.png) 280px
               100px/10% no-repeat,
@@ -721,6 +720,8 @@ $main-border-radius: 8px;
               no-repeat;
     
           .r-shop-home-main {
+            display: flex;
+
             .r-shop-home-main-inner {
 
               .r-shop-home-main-text {
@@ -757,6 +758,7 @@ $main-border-radius: 8px;
               }
             }
             .r-shop-home-main-visual {
+              display: block;
               width: 60%;
               height: 80vh;
               background: url('./../../../public/03-shop-img/potato.png') 0 0
@@ -768,7 +770,7 @@ $main-border-radius: 8px;
     }
 
     .y-section-merch {
-      max-width: 360px;
+      // max-width: 360px;
       overflow: hidden;
 
       .r-shop-home-carousel {
